--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         }
     ],
     "require": {
-        "php": "^7.1"
+        "php": "^7.1",
+        "intervention/image": "^2.5"
     },
     "require-dev": {
         "phpunit/phpunit": "^7.0"
